--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springbootemployee?useSSL=fals
 
 # MySQL username and password
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=RubethaSatJeg232418!?
 
 server.port=9999
 
