--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 services:
   mysqldb:
+    platform: linux/x86_64
     image: mysql:latest
     restart: unless-stopped
     env_file: ./.env
