--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,14 @@ spring.thymeleaf.cache=false
 
 # Set here configurations for the database connection
 
+# Connection url for the database
+spring.datasource.url=jdbc:mariadb://mysqldb/springbootemployee
 
+# MySQL username and password
+spring.datasource.username=root
+spring.datasource.password=root
+
+server.port=9999
 
 
 
