--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.datasource.url=jdbc:mariadb://mysqldb/springbootemployee
 # MySQL username and password
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.platform=mariadb
+spring.datasource.initialization-mode=always
 
 server.port=9999
 
