--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:mariadb://mysqldb/springbootemployee
 # MySQL username and password
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.platform=mariadb
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.initialization-mode=always
 
 server.port=9999
