--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.url=jdbc:mariadb://mysqldb/springbootemployee
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=mariadb
 spring.datasource.initialization-mode=always
 
 server.port=9999
