--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url=jdbc:mariadb://mysqldb/springbootemployee
+spring.datasource.url=jdbc:mariadb://mysqldb:3306/springbootemployee?useSSL=false
 
 # MySQL username and password
 spring.datasource.username=root
