--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 services:
-  mysqldb:
+  mariadb:
     platform: linux/x86_64
-    image: mysql:latest
+    image: mariadb:latest
     restart: unless-stopped
     env_file: ./.env
     environment:
@@ -14,7 +14,7 @@ services:
       - db:/var/lib/mysql
   app:
     depends_on:
-      - mysqldb
+      - mariadb
     build: .
     restart: on-failure
     env_file: ./.env
@@ -22,10 +22,11 @@ services:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mariadb://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
         "spring.datasource.username" : "$MYSQLDB_USER",
         "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.datasource.driver-class-name" : "org.mariadb.jdbc.Driver",
+        "spring.jpa.database-platform" : "mariadb",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
