--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.thymeleaf.cache=false
 
 # Connection url for the database
 spring.datasource.url=jdbc:mariadb://mysqldb:3306/springbootemployee?useSSL=false
-
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=9999
 
