--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
+    networks:
+      - app
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
@@ -27,6 +29,8 @@ services:
         "spring.datasource.driver-class-name" : "org.mariadb.jdbc.Driver",
         "spring.jpa.hibernate.ddl-auto" : "create-drop"
       }'
+     networks:
+      - app
     volumes:
       - .m2:/root/.m2
     stdin_open: true
