--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,8 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
+  networks:
+    app:
+      driver: bridge
 volumes:
   db:
