--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - 8080:8080
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mariadb://mysqldb:3306?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mariadb://localhost:3306?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "root",
         "spring.datasource.driver-class-name" : "org.mariadb.jdbc.Driver",
