--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     container_name: mysqldb
     restart: unless-stopped
     environment:
-      - MARIADB_ROOT_PASSWORD=root
-      - MARIADB_PASSWORD=root
-      - MARIADB_DATABASE=springbootemployee
-      - MARIADB_USER=root
+       MARIADB_ROOT_PASSWORD: root
+       MARIADB_PASSWORD: root
+       MARIADB_DATABASE: springbootemployee
+       MARIADB_USER: root
     networks:
       - app
     ports:
@@ -25,13 +25,9 @@ services:
     ports:
       - 8080:8080
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mariadb://localhost:3306?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "root",
-        "spring.datasource.driver-class-name" : "org.mariadb.jdbc.Driver",
-        "spring.jpa.hibernate.ddl-auto" : "create-drop"
-      }'
+        SPRING_DATASOURCE_URL: jdbc:mariadb://localhost:3306?useSSL=false
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD : root
     networks:
       - app
     volumes:
