--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - 8080:8080
     environment:
-        SPRING_DATASOURCE_URL: jdbc:mariadb://localhost:3306?useSSL=false
+        SPRING_DATASOURCE_URL: jdbc:mariadb://mysqldb:3306?useSSL=false
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD : root
     networks:
