--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         SPRING_DATASOURCE_URL: jdbc:mariadb://mysqldb:3306?useSSL=false
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD : root
+        SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
     networks:
       - app
     volumes:
