--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   app:
     depends_on:
       - mariadb
+    links:
+      - mariadb:db
     build: 
       dockerfile: ./Dockerfile
     restart: on-failure
