--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url=jdbc:mariadb://localhost:3306/springbootemployee?useSSL=false
+spring.datasource.url=jdbc:mariadb://db:3306/springbootemployee?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
