--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url=jdbc:mariadb://mysqldb:3306/springbootemployee?useSSL=false
+spring.datasource.url=jdbc:mariadb://mysqldb:3306/springbootemployee?enabledTLSProtocols=TLSv1.2
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -40,6 +40,5 @@ spring.jpa.show-sql=true
 # Naming strategy
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 Copy
