--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   mariadb:
-    image: mariadb:latest
+    image: 'mariadb:latest'
     container_name: mysqldb
     restart: unless-stopped
     environment:
@@ -12,7 +12,7 @@ services:
     networks:
       - app
     ports:
-      - 3306:3306
+      - '3306:3306'
     volumes:
       - db:/var/lib/mysql
   app:
@@ -21,7 +21,7 @@ services:
     build: 
       dockerfile: ./Dockerfile
     ports:
-      - 8080:8080
+      - '8080:8080'
     networks:
       - app
     volumes:
