--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.thymeleaf.cache=false
 
 # Connection url for the database
 spring.datasource.url=jdbc:mariadb://mysqldb:3306/springbootemployee?enabledTLSProtocols=TLSv1.2
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=shoot
+spring.datasource.password=shoot
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 
