--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url = jdbc:mariadb://mysqldb:3303/springbootemployee +"?user=sjega93&password=abc"
+spring.datasource.url = jdbc:mariadb://mysqldb:3303/springbootemployee +"useSSL=false&allowPublicKeyRetrieval=true"
 spring.datasource.username=sjega93
 spring.datasource.password=abc
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
