--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.url = jdbc:mariadb://mysqldb:3303/springbootemployee +"useSSL=
 spring.datasource.username=sjega93
 spring.datasource.password=abc
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 
