--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,9 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url = jdbc:mariadb://appdb:3303/springbootemployee 
+spring.datasource.url = jdbc:mariadb://mysqldb:3303/springbootemployee 
 spring.datasource.username=sjega93
 spring.datasource.password=abc
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
