--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   app:
     depends_on:
       - mariadb
+    command: sh -c './wait-for mysqldb:3306 -- npm start'
     build: 
       dockerfile: ./Dockerfile
     ports:
