--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,4 +13,6 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push sjega93:latest
+      - docker images
+      - -docker tag employee-crud-in-spring-boot_app:latest sjega93/test:latest
+      - docker push employee-crud-in-spring-boot_app:latest
