--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - docker login -u sjega93 -p Ruby240895!
   build:
     commands:
-      - docker-compose build
+      - docker build
 
   post_build:
     commands:
