--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+      - docker tag
       - echo Pushing the Docker image...
       - docker images
-      - docker push sjega93/test:version2
+      - docker push sjega93/test:version3
