--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ MYSQLDB_DATABASE=springbootemployee
 MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_DOCKER_PORT=3306
 SPRING_LOCAL_PORT=8080
-SPRING_DOCKER_PORT=9999
+DOCKERHUBLOGIN=sjega93
+DOCKERHUBPW=Ruby240895!
