--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.thymeleaf.cache=false
 # Set here configurations for the database connection
 
 # Connection url for the database
-spring.datasource.url = jdbc:mariadb://mysqldb:3306/springbootemployee 
-spring.datasource.username=sjega93
-spring.datasource.password=abc
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8081
 
 
