--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - docker login -u sjega93 -p Ruby240895!
   build:
     commands:
-      - docker build -t sjega93/test:versionSearchP8081 .
+      - docker build -t sjega93/test:latest .
 
   post_build:
     commands:
